[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/RoofW2.gd" type="Script" id=1]
[ext_resource path="res://Objects/BrickBreakLeft.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/BrickBreakRight.tscn" type="PackedScene" id=3]

[node name="RoofW2" type="Node2D"]
script = ExtResource( 1 )

[node name="Line1" type="Node2D" parent="."]
editor/display_folded = true

[node name="BrickBreakLeft" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 22.9116, 15.7517 )

[node name="BrickBreakLeft2" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 71.231, 15.752 )

[node name="BrickBreakLeft3" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 119.416, 15.752 )

[node name="BrickBreakLeft4" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 167.601, 15.752 )

[node name="BrickBreakLeft5" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 215.845, 15.752 )

[node name="BrickBreakLeft6" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 263.086, 15.752 )

[node name="BrickBreakLeft7" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 311.142, 15.752 )

[node name="BrickBreakLeft8" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 359.198, 15.752 )

[node name="BrickBreakLeft9" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 406.44, 15.752 )

[node name="BrickBreakLeft10" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 454.495, 15.752 )

[node name="BrickBreakLeft11" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 501.601, 15.752 )

[node name="Left1" parent="Line1" instance=ExtResource( 2 )]
position = Vector2( 549.101, 15.752 )

[node name="Right1" parent="Line1" instance=ExtResource( 3 )]
position = Vector2( 596.682, 15.752 )

[node name="BrickBreakRight" parent="Line1" instance=ExtResource( 3 )]
position = Vector2( 643.336, 15.752 )

[node name="BrickBreakRight2" parent="Line1" instance=ExtResource( 3 )]
position = Vector2( 691.218, 15.9606 )

[node name="BrickBreakRight3" parent="Line1" instance=ExtResource( 3 )]
position = Vector2( 737.872, 15.9606 )

[node name="Line2" type="Node2D" parent="."]
editor/display_folded = true

[node name="BrickBreakLeft" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 23.228, 46.7532 )

[node name="BrickBreakLeft2" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 70.9861, 46.753 )

[node name="BrickBreakLeft3" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 118.089, 46.753 )

[node name="BrickBreakLeft4" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 165.855, 46.753 )

[node name="BrickBreakLeft5" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 212.958, 46.753 )

[node name="BrickBreakLeft6" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 260.061, 46.753 )

[node name="BrickBreakLeft7" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 307.164, 46.753 )

[node name="BrickBreakLeft8" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 354.93, 46.753 )

[node name="BrickBreakLeft9" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 402.943, 46.753 )

[node name="BrickBreakLeft10" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 450.957, 46.753 )

[node name="BrickBreakLeft11" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 498.97, 46.753 )

[node name="Left2" parent="Line2" instance=ExtResource( 2 )]
position = Vector2( 547.84, 46.753 )

[node name="Right2" parent="Line2" instance=ExtResource( 3 )]
position = Vector2( 595.02, 46.753 )

[node name="BrickBreakRight" parent="Line2" instance=ExtResource( 3 )]
position = Vector2( 642.175, 45.8956 )

[node name="BrickBreakRight2" parent="Line2" instance=ExtResource( 3 )]
position = Vector2( 690.188, 46.753 )

[node name="BrickBreakRight3" parent="Line2" instance=ExtResource( 3 )]
position = Vector2( 738.201, 46.753 )

[node name="Line3" type="Node2D" parent="."]
editor/display_folded = true

[node name="BrickBreakLeft" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 24.0066, 78.8787 )

[node name="BrickBreakLeft2" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 71.162, 78.879 )

[node name="BrickBreakLeft3" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 119.175, 78.879 )

[node name="BrickBreakLeft4" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 167.188, 78.879 )

[node name="BrickBreakLeft5" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 215.201, 78.879 )

[node name="BrickBreakLeft6" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 263.214, 78.879 )

[node name="BrickBreakLeft7" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 310.37, 78.879 )

[node name="BrickBreakLeft8" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 358.383, 78.879 )

[node name="BrickBreakLeft9" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 406.396, 78.879 )

[node name="BrickBreakLeft10" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 453.552, 78.879 )

[node name="BrickBreakLeft11" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 501.565, 78.879 )

[node name="Left3" parent="Line3" instance=ExtResource( 2 )]
position = Vector2( 548.721, 78.879 )

[node name="Right3" parent="Line3" instance=ExtResource( 3 )]
position = Vector2( 596.734, 78.879 )

[node name="BrickBreak" parent="Line3" instance=ExtResource( 3 )]
position = Vector2( 643.89, 78.0216 )

[node name="BrickBreak2" parent="Line3" instance=ExtResource( 3 )]
position = Vector2( 691.903, 78.0216 )

[node name="BrickBreak3" parent="Line3" instance=ExtResource( 3 )]
position = Vector2( 739.059, 78.0216 )
